# progbase2

./: .gitignore
labs/lab1/: .gitignore  CMakeBash.sh  CMakeLists.txt  README.md  data.txt  main.cpp  КП92_ЛР1_Мовчан_Максим.docx
labs/lab1/MODULES/: dynamic_array.cpp  dynamic_array.h  fs.cpp  fs.h  list.cpp  list.h  stack.cpp  stack.h
labs/lab2/: CMakeLists.txt  compile+test.sh  КП92_ЛР2_Мовчан_Максим.docx
labs/lab2/CSV/: data.csv  out.csv
labs/lab2/HEADERS/: Organisations.h  csv.h  dynamic_array.h  fs.h  list.h  string_table.h
labs/lab2/SOURCE CODE/: csv.cpp  dynamic_array.cpp  fs.cpp  list.cpp  main.cpp  string_table.cpp
labs/lab3/: CMakeLists.txt  compile+test.sh  КП92_ЛР3_Мовчан_Максим.docx
labs/lab3/CSV/: data.csv  out.csv
labs/lab3/HEADERS/: BinTree.h  BsTree.h  Organisation.h  csv.h  dynamic_array.h  list.h  string_table.h
labs/lab3/SOURCE CODE/: BsTree.cpp  csv.cpp  main.cpp  string_table.cpp
labs/lab4/: CMakeLists.txt  compile+test.sh  csv.cpp  csv.h  cui.cpp  cui.h  main.cpp  organisation.h  storage.cpp  storage.h  string_table.cpp  string_table.h
labs/lab4/H/: csv.hpp  cui.hpp  storage.hpp
labs/lab4/S/: csv.cpp  cui.cpp  main.cpp  storage.cpp
labs/lab4/data/: data.csv
labs/lab4/doc/: КП92_ЛР4_Мовчан_Максим.docx
labs/lab5/doc/: КП92_ЛР5_Мовчан_Максим.docx
labs/lab5/libcsvlab/: CMakeLists.txt  csv.cpp  csv.h  string_table.cpp  string_table.h
labs/lab5/project/: CMakeLists.txt  album.h  cui.cpp  cui.h  cui.hpp  main.cpp  photo.h  storage.cpp  storage.h
labs/lab6/doc/: .~lock.КП92_ЛР5_Мовчан_Максим.docx#
labs/lab7/: orgs.csv
(+60 files in other folders)
